assets/stylesheets/mobile/quick_mobile.scss
.d-header-icons .icon {
  width: 10vw;
  max-width: 2.2857em;
}

.messages-container {
  z-index: 99999;
}

.docked-composer {
  width: 100%;
  height: 100%;

  &.open {
    top: 0;
  }

  .docked-composer-header, &.minimized .docked-composer-header {
    height: 50px;
    line-height: 50px;

    .controls > a {
      margin: 0 10px;
    }

    a.cancel {
      font-size: 23px;
      margin-bottom: 3px;
    }

    a.toggler {
      font-size: 30px;
      margin-bottom: 5px;
    }

    a.topic-link {
      font-size: 20px;
    }
  }

  .docked-usernames {
    font-size: 1.1em;
  }

  .docked-editor {
    left: 0;
    right: 0;
    margin-bottom: 2px;
  }

  .docked-editor-container {
    width: 100%;
  }

  .docked-editor-textarea-wrapper {
    overflow: hidden;
    width: initial;
    line-height: 0;

    .d-editor-input {
      margin-bottom: 0;
      min-height: 50px;
      line-height: 25px;
    }

    .autocomplete {
      left: 15px !important;
      bottom: 40px !important;
      top: initial !important;
    }
  }

  .button-bar {
    float: right;
    position: initial;
    line-height: 50px;
    padding-right: 5px;

    .btn {
      padding: 6px 10px;
      font-size: 1.4em;
    }
  }
}

